начал заново делать макет, навбар для 320px, открывается через toggle jquery, накладывается на макет почти ровно.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html><head><title>Главная</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" type="text/css" href="css/style.css"></head><body><header class="header"><div class="header__top-section"><div class="header__logo"><div class="header__logo-text">B</div></div><div class="header__left-text"> <a href="#!">private banking</a></div><div class="header__left-text"> <a href="#!">О банке</a></div></div><div class="header__right-text"><a href="#!">Офисы и банкоматы</a></div><div class="header__right-text"> <a href="#!">En</a></div><div class="header__look"><span class="icon-Look"></span></div><div class="header__search"><span class="icon-Search"></span></div><div class="header__toggler"><span class="icon-menu"></span></div><div class="header__tel"> <a href="tel:+74959568626">+7 (495) 956–86–26</a></div></header></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Главная</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__logo">B</div>
+      <div class="header__right-icons"><span class="icon-Search"></span><span class="icon-menu" id="icon-menu"></span></div>
+    </header>
+    <ul class="header__menu">
+      <li class="header__main-item"><a class="header__main-item-dropdown" href="#!">Частным клиентам</a></li>
+      <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Корпоративным клиентам</a></li>
+      <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Услуги на рынке ценных бумаг</a></li>
+      <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> О банке</a></li>
+      <li class="header__main-item"> <a href="#!">Private banking</a></li>
+      <li class="header__main-item"> <a href="#!">Специальная версия для людей с ограниченными возможностями</a></li>
+      <li class="header__main-item tel"> <a class="tel" href="#!">+7 495 956 86 26</a></li>
+    </ul>
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/header__toggler/header__toggler.js"></script>
+  </body>
+</html>
