Навбар под 320px готов

--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
       <div class="header__right-icons"><span class="icon-Search"></span><span class="icon-menu" id="icon-menu"></span></div>
     </header>
     <ul class="header__menu">
-      <li class="header__main-item"><a class="header__main-item-dropdown" href="#!">Частным клиентам
-          <li class="header__for-person-list-item"> <a>Платежный сервис</a></li>
-          <li class="header__for-person-list-item"> <a>Монеты</a></li>
-          <li class="header__for-person-list-item"> <a>Вклады</a></li>
-          <li class="header__for-person-list-item"> <a>Банковские карты</a></li>
-          <li class="header__for-person-list-item"> <a>Кридитование физических лиц</a></li>
-          <li class="header__for-person-list-item"> <a>Операции с наличной иностранной валютой</a></li>
-          <li class="header__for-person-list-item"> <a>Тарифы</a></li>
-          <li class="header__for-person-list-item"> <a>Текущие счета</a></li>
-          <li class="header__for-person-list-item"> 
-            <div class="top-img"><img src="media/top4.png"></div>
-          </li></a></li>
+      <li class="header__main-item" id="for-person"><a class="header__main-item-dropdown" href="#!">Частным клиентам</a></li>
+      <li class="header__for-person-list-item"> <a href="#!">Платежный сервис</a></li>
+      <li class="header__for-person-list-item"> <a href="#!">Монеты</a></li>
+      <li class="header__for-person-list-item"> <a href="#!">Вклады</a></li>
+      <li class="header__for-person-list-item"> <a href="#!">Банковские карты</a></li>
+      <li class="header__for-person-list-item"> <a href="#!">Кридитование физических лиц</a></li>
+      <li class="header__for-person-list-item"> <a href="#!">Операции с наличной иностранной валютой</a></li>
+      <li class="header__for-person-list-item"> <a href="#!">Тарифы</a></li>
+      <li class="header__for-person-list-item"> <a href="#!">Текущие счета</a></li>
+      <li class="header__for-person-list-item"> 
+        <div class="header__top-img"><img src="media/top4.png"></div>
+        <div class="header__img-text">Интернет-банк для частных лиц</div>
+        <div class="request-container">
+          <div class="btn">Подать заявку</div>
+        </div>
+      </li>
       <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Корпоративным клиентам</a></li>
       <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Услуги на рынке ценных бумаг</a></li>
       <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> О банке</a></li>
       <li class="header__main-item"> <a href="#!">Private banking</a></li>
       <li class="header__main-item"> <a href="#!">Специальная версия для людей с ограниченными возможностями</a></li>
-      <li class="header__main-item tel"> <a class="tel" href="#!">+7 495 956 86 26</a></li>
+      <li class="header__main-item header__tel"> <a class="header__tel" href="#!">+7 495 956 86 26</a></li>
     </ul>
     <script src="js/header__toggler/header__toggler.js"></script>
   </body>
