Навбар под 320px готов

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="header__right-icons"><span class="icon-Search"></span><span class="icon-menu" id="icon-menu"></span></div>
     </header>
     <ul class="header__menu">
-      <li class="header__main-item" id="for-person"><a class="header__main-item-dropdown" href="#!">Частным клиентам</a></li>
+      <li class="header__main-item" id="for-person"><a class="header__main-item-dropdown" href="#!" id="for-person-dropdown">Частным клиентам</a></li>
       <li class="header__for-person-list-item"> <a href="#!">Платежный сервис</a></li>
       <li class="header__for-person-list-item"> <a href="#!">Монеты</a></li>
       <li class="header__for-person-list-item"> <a href="#!">Вклады</a></li>
@@ -23,7 +23,7 @@
       <li class="header__for-person-list-item"> 
         <div class="header__top-img"><img src="media/top4.png"></div>
         <div class="header__img-text">Интернет-банк для частных лиц</div>
-        <div class="request-container">
+        <div class="header__request-container">
           <div class="btn">Подать заявку</div>
         </div>
       </li>
