начал верстку под 768px

--- a/index.html
+++ b/index.html
@@ -8,31 +8,52 @@
   <body>
     <header class="header">
       <div class="header__logo">B</div>
-      <div class="header__right-icons"><span class="icon-Search"></span><span class="icon-menu" id="icon-menu"></span></div>
+      <div class="header__right-icons">
+        <div class="office"><a href="#!">Офисы и банкоматы</a></div>
+        <div class="lang"><a href="#!">EN</a></div><a href="#!"><span class="icon-Look"></span></a><span class="icon-Search"></span><span class="icon-menu" id="icon-menu"></span>
+      </div>
     </header>
-    <ul class="header__menu">
-      <li class="header__main-item" id="for-person"><a class="header__main-item-dropdown" href="#!" id="for-person-dropdown">Частным клиентам</a></li>
-      <li class="header__for-person-list-item"> <a href="#!">Платежный сервис</a></li>
-      <li class="header__for-person-list-item"> <a href="#!">Монеты</a></li>
-      <li class="header__for-person-list-item"> <a href="#!">Вклады</a></li>
-      <li class="header__for-person-list-item"> <a href="#!">Банковские карты</a></li>
-      <li class="header__for-person-list-item"> <a href="#!">Кридитование физических лиц</a></li>
-      <li class="header__for-person-list-item"> <a href="#!">Операции с наличной иностранной валютой</a></li>
-      <li class="header__for-person-list-item"> <a href="#!">Тарифы</a></li>
-      <li class="header__for-person-list-item"> <a href="#!">Текущие счета</a></li>
-      <li class="header__for-person-list-item"> 
-        <div class="header__top-img"><img src="media/top4.png"></div>
-        <div class="header__img-text">Интернет-банк для частных лиц</div>
-        <div class="header__request-container">
-          <div class="btn">Подать заявку</div>
-        </div>
-      </li>
-      <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Корпоративным клиентам</a></li>
-      <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Услуги на рынке ценных бумаг</a></li>
-      <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> О банке</a></li>
-      <li class="header__main-item"> <a href="#!">Private banking</a></li>
-      <li class="header__main-item"> <a href="#!">Специальная версия для людей с ограниченными возможностями</a></li>
-      <li class="header__main-item header__tel"> <a class="header__tel" href="#!">+7 495 956 86 26</a></li>
+    <div class="header__mobile-menu">
+      <ul class="header__menu">
+        <li class="header__main-item" id="for-person"><a class="header__main-item-dropdown" href="#!" id="for-person-dropdown">Частным клиентам</a></li>
+        <li class="header__for-person-list-item"> <a href="#!">Платежный сервис</a></li>
+        <li class="header__for-person-list-item"> <a href="#!">Монеты</a></li>
+        <li class="header__for-person-list-item"> <a href="#!">Вклады</a></li>
+        <li class="header__for-person-list-item"> <a href="#!">Банковские карты</a></li>
+        <li class="header__for-person-list-item"> <a href="#!">Кридитование физических лиц</a></li>
+        <li class="header__for-person-list-item"> <a href="#!">Операции с наличной иностранной валютой</a></li>
+        <li class="header__for-person-list-item"> <a href="#!">Тарифы</a></li>
+        <li class="header__for-person-list-item"> <a href="#!">Текущие счета</a></li>
+        <li class="header__for-person-list-item"> 
+          <div class="header__top-img"><img src="media/top4.png"></div>
+          <div class="header__img-text">Интернет-банк для частных лиц</div>
+          <div class="header__request-container"><a class="btn" href="#!">Подать заявку</a></div>
+        </li>
+        <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Корпоративным клиентам</a></li>
+        <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Услуги на рынке ценных бумаг</a></li>
+        <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> О банке</a></li>
+        <li class="header__main-item"> <a href="#!">Private banking</a></li>
+        <li class="header__main-item"> <a href="#!">Специальная версия для людей с ограниченными возможностями</a></li>
+        <li class="header__main-item header__tel"> <a class="header__tel" href="tel:84959568626">+7 495 956 86 26</a></li>
+      </ul>
+    </div>
+    <div class="header__menu">
+      <ul class="header__main-header-menu">
+        <li class="header__main-header-menu-item"><a href="#!">Частным клиентам</a></li>
+        <li class="header__main-header-menu-item"><a href="#!">Корпоративным клиентам</a></li>
+        <li class="header__main-header-menu-item"><a href="#!">Услуги на ранке ценных бумаг</a></li>
+      </ul>
+    </div>
+    <div class="for-person-block"></div>
+    <ul class="for-person-list">
+      <li class="for-person-list-item"><a href="#!">Платежный сервис</a></li>
+      <li class="for-person-list-item"><a href="#!">Моенты</a></li>
+      <li class="for-person-list-item"><a href="#!">Вклады</a></li>
+      <li class="for-person-list-item"><a href="#!">Банковские карты</a></li>
+      <li class="for-person-list-item"><a href="#!">Кредитование физических лиц</a></li>
+      <li class="for-person-list-item"><a href="#!">Операции с наличной иностранной валютой</a></li>
+      <li class="for-person-list-item"><a href="#!">Тарифы</a></li>
+      <li class="for-person-list-item"><a href="#!">Текущие счета</a></li>
     </ul>
     <script src="js/header__toggler/header__toggler.js"></script>
   </body>
