начал верстку под 768px, переименовал по бэм

--- a/index.html
+++ b/index.html
@@ -44,17 +44,19 @@
         <li class="header__main-header-menu-item"><a href="#!">Услуги на ранке ценных бумаг</a></li>
       </ul>
     </div>
-    <div class="for-person-block"></div>
-    <ul class="for-person-list">
-      <li class="for-person-list-item"><a href="#!">Платежный сервис</a></li>
-      <li class="for-person-list-item"><a href="#!">Моенты</a></li>
-      <li class="for-person-list-item"><a href="#!">Вклады</a></li>
-      <li class="for-person-list-item"><a href="#!">Банковские карты</a></li>
-      <li class="for-person-list-item"><a href="#!">Кредитование физических лиц</a></li>
-      <li class="for-person-list-item"><a href="#!">Операции с наличной иностранной валютой</a></li>
-      <li class="for-person-list-item"><a href="#!">Тарифы</a></li>
-      <li class="for-person-list-item"><a href="#!">Текущие счета</a></li>
-    </ul>
+    <div class="header__for-person-block">
+      <ul class="header__for-person-list">
+        <li class="header__for-person-list-item"><a href="#!">Платежный сервис</a></li>
+        <li class="header__for-person-list-item"><a href="#!">Моенты</a></li>
+        <li class="header__for-person-list-item"><a href="#!">Вклады</a></li>
+        <li class="header__for-person-list-item"><a href="#!">Банковские карты</a></li>
+        <li class="header__for-person-list-item"><a href="#!">Кредитование физических лиц</a></li>
+        <li class="header__for-person-list-item"><a href="#!">Операции с наличной иностранной валютой</a></li>
+        <li class="header__for-person-list-item"><a href="#!">Тарифы</a></li>
+        <li class="header__for-person-list-item"><a href="#!">Текущие счета</a></li>
+      </ul>
+      <div class="s"></div>
+    </div>
     <script src="js/header__toggler/header__toggler.js"></script>
   </body>
 </html>
