--- a/index.html
+++ b/index.html
@@ -29,7 +29,25 @@
           <div class="header__img-text">Интернет-банк для частных лиц</div>
           <div class="header__request-container"><a class="btn" href="#!">Подать заявку</a></div>
         </li>
-        <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Корпоративным клиентам</a></li>
+        <li class="header__main-item" id="for-corp"><a class="header__main-item-dropdown" href="#!" id="for-corp-dropdown"> Корпоративным клиентам</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Интернет-банк</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Рассчетно-кассовое обслуживание</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Как стать клиентом</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Кредитные сделки</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Тарифы</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Валютный контроль</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Управление проектного и структурного финансирования</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Корпоративное финансирование</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Организация операционно-кассового подразделения</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Войти в интернет-банк для юридических лиц</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Векселя</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Торговое финансирование и экспортно-импортные операции</a></li>
+        <li class="header__for-corp-list-item"> <a href="#!">Инкассация </a></li>
+        <li class="header__for-corp-list-item"> 
+          <div class="header__top-img-corp"><img src="media/top5.png"></div>
+          <div class="header__img-text-corp">Интернет-банк для юридических лиц</div>
+          <div class="header__request-container"><a class="btn" href="#!">Подать заявку</a></div>
+        </li>
         <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Услуги на рынке ценных бумаг</a></li>
         <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> О банке</a></li>
         <li class="header__main-item"> <a href="#!">Private banking</a></li>
@@ -39,7 +57,7 @@
     </div>
     <div class="header__menu">
       <ul class="header__main-header-menu">
-        <li class="header__main-header-menu-item"><a href="#!">Частным клиентам</a></li>
+        <li class="header__main-header-menu-item" id="for-person-tablet"><a href="#!" id="for-person-tablet-link">Частным клиентам</a></li>
         <li class="header__main-header-menu-item"><a href="#!">Корпоративным клиентам</a></li>
         <li class="header__main-header-menu-item"><a href="#!">Услуги на ранке ценных бумаг</a></li>
       </ul>
@@ -47,7 +65,7 @@
     <div class="header__for-person-block">
       <ul class="header__for-person-list">
         <li class="header__for-person-list-item"><a href="#!">Платежный сервис</a></li>
-        <li class="header__for-person-list-item"><a href="#!">Моенты</a></li>
+        <li class="header__for-person-list-item"><a href="#!">Монeты</a></li>
         <li class="header__for-person-list-item"><a href="#!">Вклады</a></li>
         <li class="header__for-person-list-item"><a href="#!">Банковские карты</a></li>
         <li class="header__for-person-list-item"><a href="#!">Кредитование физических лиц</a></li>
@@ -55,7 +73,17 @@
         <li class="header__for-person-list-item"><a href="#!">Тарифы</a></li>
         <li class="header__for-person-list-item"><a href="#!">Текущие счета</a></li>
       </ul>
-      <div class="s"></div>
+      <div class="header__signIn-container">
+        <div class="header__signInimage">
+          <div class="header__top-img"><img src="media/top4.png" alt="Войти в личный каинет" title="Войти в личный кабинет"></div>
+        </div>
+        <div class="header__signIn">
+          <div class="header__signIn-text">Интернет-банк для частных лиц</div><a class="btn">Войти в личный кабинет</a>
+        </div>
+      </div>
+      <div class="header__about-bank-container">
+        <div class="header__title-about"><a href="#!">О банке</a><i></i></div>
+      </div>
     </div>
     <script src="js/header__toggler/header__toggler.js"></script>
   </body>
