готовый навбар для смартфонов и планшетов

--- a/index.html
+++ b/index.html
@@ -78,11 +78,24 @@
           <div class="header__top-img"><img src="media/top4.png" alt="Войти в личный каинет" title="Войти в личный кабинет"></div>
         </div>
         <div class="header__signIn">
-          <div class="header__signIn-text">Интернет-банк для частных лиц</div><a class="btn">Войти в личный кабинет</a>
+          <div class="header__signIn-text">Интернет-банк для частных лиц</div><a class="btn" href="#!">Войти в личный кабинет</a>
         </div>
       </div>
       <div class="header__about-bank-container">
-        <div class="header__title-about"><a href="#!">О банке</a><i></i></div>
+        <div class="header__title-about"> <a class="header__about-bank-drop" href="#!" id="header__about-bank_tablet">О банке</a>
+          <ul class="header__about-bank-list">
+            <li><a href="#!">Для юридических лиц</a></li>
+            <li><a href="#!">Резервный канал</a></li>
+            <li><a href="#!">Для частных клиентов</a></li>
+            <li><a href="#!">Личный кабинет инвестора</a></li>
+            <li><a href="#!">Перевод с карты на карту</a></li>
+            <li><a href="#!">Samsung Pay</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="header__contacts">
+        <div class="private"> <a href="#!">Private banking</a></div>
+        <div class="tel"><a href="tel:84959568626">+7 495 956 86 26</a></div>
       </div>
     </div>
     <script src="js/header__toggler/header__toggler.js"></script>
