--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__logo">B</div>
+      <div class="header__left-text">
+        <div class="header__logo">B</div>
+        <div class="header__banking_desktop"> <a href="#!">Private banking</a></div>
+        <div class="header__about-bank_desktop"> <a href="#!">О банке</a></div>
+      </div>
       <div class="header__right-icons">
         <div class="office"><a href="#!">Офисы и банкоматы</a></div>
-        <div class="lang"><a href="#!">EN</a></div><a href="#!"><span class="icon-Look"></span></a><span class="icon-Search"></span><span class="icon-menu" id="icon-menu"></span>
+        <div class="lang"><a href="#!">EN</a></div><a href="#!"><span class="icon-Look"></span></a><span class="icon-Search"></span><span class="icon-menu" id="icon-menu"></span><a class="header__tel-desktop" href="tel:84959568626">+7 495 956 86 26</a>
       </div>
     </header>
     <div class="header__mobile-menu">
@@ -62,22 +66,24 @@
         <li class="header__main-header-menu-item"><a href="#!">Услуги на ранке ценных бумаг</a></li>
       </ul>
       <div class="header__for-person-block">
-        <ul class="header__for-person-list">
-          <li class="header__for-person-list-item"><a href="#!">Платежный сервис</a></li>
-          <li class="header__for-person-list-item"><a href="#!">Монeты</a></li>
-          <li class="header__for-person-list-item"><a href="#!">Вклады</a></li>
-          <li class="header__for-person-list-item"><a href="#!">Банковские карты</a></li>
-          <li class="header__for-person-list-item"><a href="#!">Кредитование физических лиц</a></li>
-          <li class="header__for-person-list-item"><a href="#!">Операции с наличной иностранной валютой</a></li>
-          <li class="header__for-person-list-item"><a href="#!">Тарифы</a></li>
-          <li class="header__for-person-list-item"><a href="#!">Текущие счета</a></li>
-        </ul>
-        <div class="header__signIn-container">
-          <div class="header__signInimage">
-            <div class="header__top-img"><img src="media/top4.png" alt="Войти в личный каинет" title="Войти в личный кабинет"></div>
-          </div>
-          <div class="header__signIn">
-            <div class="header__signIn-text">Интернет-банк для частных лиц</div><a class="btn" href="#!">Войти в личный кабинет</a>
+        <div class="header__inline">
+          <ul class="header__for-person-list">
+            <li class="header__for-person-list-item"><a href="#!">Платежный сервис</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Монeты</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Вклады</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Банковские карты</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Кредитование физических лиц</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Операции с наличной иностранной валютой</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Тарифы</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Текущие счета</a></li>
+          </ul>
+          <div class="header__signIn-container">
+            <div class="header__signInimage">
+              <div class="header__top-img"><img src="media/top4.png" alt="Войти в личный каинет" title="Войти в личный кабинет"></div>
+            </div>
+            <div class="header__signIn">
+              <div class="header__signIn-text">Интернет-банк для частных лиц</div><a class="btn" href="#!">Войти в личный кабинет</a>
+            </div>
           </div>
         </div>
         <div class="header__about-bank-container">
