конец на 2 декабря

--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
     </div>
     <div class="header__menu">
       <ul class="header__main-header-menu">
-        <li class="header__main-header-menu-item" id="for-person-tablet"><a href="#!" id="for-person-tablet-link">Частным клиентам</a></li>
-        <li class="header__main-header-menu-item"><a href="#!">Корпоративным клиентам</a></li>
-        <li class="header__main-header-menu-item"><a href="#!">Услуги на ранке ценных бумаг</a></li>
+        <div class="header__main-header-menu-items">
+          <li class="header__main-header-menu-item" id="for-person-tablet"><a href="#!" id="for-person-tablet-link">Частным клиентам</a></li>
+          <li class="header__main-header-menu-item"><a href="#!">Корпоративным клиентам</a></li>
+          <li class="header__main-header-menu-item"><a href="#!">Услуги на ранке ценных бумаг</a></li>
+        </div>
+        <div class="header__desktop-search">
+          <li><a class="icon-Search" href="#!"></a></li>
+        </div>
       </ul>
       <div class="header__for-person-block">
         <div class="header__inline">
