добавил дропдаун о банке рядом с лого, убрал последний медиа-запрос, делаю по mobile last

--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
       <div class="header__left-text">
         <div class="header__logo">B</div>
         <div class="header__banking_desktop"> <a href="#!">Private banking</a></div>
-        <div class="header__about-bank_desktop"> <a href="#!">О банке</a></div>
+        <div class="header__about-bank_desktop"> <a href="#!" id="header__about-bank-button_desktop">О банке</a></div>
       </div>
       <div class="header__right-icons">
         <div class="office"><a href="#!">Офисы и банкоматы</a></div>
         <div class="lang"><a href="#!">EN</a></div><a href="#!"><span class="icon-Look"></span></a><span class="icon-Search"></span><span class="icon-menu" id="icon-menu"></span><a class="header__tel-desktop" href="tel:84959568626">+7 495 956 86 26</a>
       </div>
     </header>
+    <div class="header__about-bank-block_desktop">
+      <ul>
+        <li><a href="#!">Для юридических лиц</a></li>
+        <li><a href="#!">Резервный канал</a></li>
+        <li><a href="#!">Для частных клиентов</a></li>
+        <li><a href="#!">Личный кабинет инвестора</a></li>
+        <li><a href="#!">Перевод с карты на карту</a></li>
+        <li><a href="#!">Samsung Pay</a></li>
+      </ul>
+      <div class="header__about-bank-block-close_desktop"><a class="icon-Close" id="header__about-bank-button-close_desktop"></a></div>
+    </div>
     <div class="header__mobile-menu">
       <ul class="header__menu">
         <li class="header__main-item" id="for-person"><a class="header__main-item-dropdown" href="#!" id="for-person-dropdown">Частным клиентам</a></li>
