Все дропдауны на 360px работают

--- a/index.html
+++ b/index.html
@@ -63,8 +63,32 @@
           <div class="header__img-text-corp">Интернет-банк для юридических лиц</div>
           <div class="header__request-container"><a class="btn" href="#!">Подать заявку</a></div>
         </li>
-        <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> Услуги на рынке ценных бумаг</a></li>
-        <li class="header__main-item"><a class="header__main-item-dropdown" href="#!"> О банке</a></li>
+        <li class="header__main-item" id="for-services"><a class="header__main-item-dropdown" href="#!" id="for-services-dropdown"> Услуги на рынке ценных бумаг</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Брокерское обслуживание</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Документы</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Прямой доступ на валютный рынок</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Облигации</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Еврооблигации</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Тарифы</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Интернет-трейдинг QUIK</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Интернет-трейдинг TRANSAQ</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Войти в личный кабинет</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Депозитарные условия</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Открыть счет</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Рынки</a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Непокрытые сделки </a></li>
+        <li class="header__for-services-list-item"> <a href="#!">Контакты</a></li>
+        <li class="header__for-services-list-item"> 
+          <div class="header__top-img-services"><img src="media/top6.png"></div>
+          <div class="header__request-container"><a class="btn" href="#!">Войти в личный кабинет</a></div>
+        </li>
+        <li class="header__main-item" id="for-about-bank-mobile"><a class="header__main-item-dropdown" href="#!" id="for-about-bank-mobile-dropdown"> О банке</a></li>
+        <li class="header__for-about-bank-mobile-list-item"> <a href="#!">Для юридических лиц</a></li>
+        <li class="header__for-about-bank-mobile-list-item"> <a href="#!">Резервный канал</a></li>
+        <li class="header__for-about-bank-mobile-list-item"> <a href="#!">Для частных клиентов</a></li>
+        <li class="header__for-about-bank-mobile-list-item"> <a href="#!">Личный кабинет инвестора</a></li>
+        <li class="header__for-about-bank-mobile-list-item"> <a href="#!">Перевод с карты на карту</a></li>
+        <li class="header__for-about-bank-mobile-list-item last-item"> <a href="#!">Samsung Pay</a></li>
         <li class="header__main-item"> <a href="#!">Private banking</a></li>
         <li class="header__main-item"> <a href="#!">Специальная версия для людей с ограниченными возможностями</a></li>
         <li class="header__main-item header__tel"> <a class="header__tel" href="tel:84959568626">+7 495 956 86 26</a></li>
