корпоративным клиентам от планшетов и больше-ок

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <ul class="header__main-header-menu">
         <div class="header__main-header-menu-items">
           <li class="header__main-header-menu-item" id="for-person-tablet"><a href="#!" id="for-person-tablet-link">Частным клиентам</a></li>
-          <li class="header__main-header-menu-item"><a href="#!">Корпоративным клиентам</a></li>
+          <li class="header__main-header-menu-item" id="for-corp-tablet"><a href="#!" id="for-corp-tablet-link">Корпоративным клиентам</a></li>
           <li class="header__main-header-menu-item"><a href="#!">Услуги на ранке ценных бумаг</a></li>
         </div>
         <div class="header__desktop-search">
@@ -136,6 +136,37 @@
               <li><a href="#!">Перевод с карты на карту</a></li>
               <li><a href="#!">Samsung Pay</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="header__contacts">
+          <div class="private"> <a href="#!">Private banking</a></div>
+          <div class="tel"><a href="tel:84959568626">+7 495 956 86 26</a></div>
+        </div>
+      </div>
+      <div class="header__for-corp-block">
+        <div class="header__inline">
+          <ul class="header__for-person-list">
+            <li class="header__for-person-list-item"><a href="#!">Интернет-банк</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Рассчетно-кассовое обслуживание</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Как стать клиентом</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Кредитные сделки</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Тарифы</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Валютный контроль</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Управление проектного и структурного финансирования</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Корпоративное финансирование</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Организация операционно-кассового подразделения</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Войти в интернет-банк для юридических лиц</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Векселя</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Торговое финансирование и экспортно-импортные операции</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Инкассация</a></li>
+          </ul>
+          <div class="header__signIn-container">
+            <div class="header__signInimage">
+              <div class="header__top-img-corp"><img src="media/top5.png" alt="Войти в личный каинет" title="Войти в личный кабинет"></div>
+            </div>
+            <div class="header__signIn-corp">
+              <div class="header__signIn-text">Интернет-банк для юридических лиц</div><a class="btn" href="#!">Войти в личный кабинет</a>
+            </div>
           </div>
         </div>
         <div class="header__contacts">
