понял, как было лучше сделать, но меню уже готово

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="header__main-header-menu-items">
           <li class="header__main-header-menu-item" id="for-person-tablet"><a href="#!" id="for-person-tablet-link">Частным клиентам</a></li>
           <li class="header__main-header-menu-item" id="for-corp-tablet"><a href="#!" id="for-corp-tablet-link">Корпоративным клиентам</a></li>
-          <li class="header__main-header-menu-item"><a href="#!">Услуги на ранке ценных бумаг</a></li>
+          <li class="header__main-header-menu-item" id="for-services-tablet"><a href="#!" id="for-services-tablet-link">Услуги на ранке ценных бумаг</a></li>
         </div>
         <div class="header__desktop-search">
           <li><a class="icon-Search" href="#!"></a></li>
@@ -167,6 +167,36 @@
             <div class="header__signIn-corp">
               <div class="header__signIn-text">Интернет-банк для юридических лиц</div><a class="btn" href="#!">Войти в личный кабинет</a>
             </div>
+          </div>
+        </div>
+        <div class="header__contacts">
+          <div class="private"> <a href="#!">Private banking</a></div>
+          <div class="tel"><a href="tel:84959568626">+7 495 956 86 26</a></div>
+        </div>
+      </div>
+      <div class="header__for-services-block">
+        <div class="header__inline">
+          <ul class="header__for-person-list" id="services-gap">
+            <li class="header__for-person-list-item"><a href="#!">Брокерское обслуживание</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Документы</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Прямой доступ на валютный рынок</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Облигации</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Еврооблигации</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Тарифы</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Интернет-трейдинг QUIK</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Интернет-трейдинг TRANSAQ</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Войти в личный кабинет</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Депозитарные услуги</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Открыть счет</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Рынки</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Непокрытые сделки</a></li>
+            <li class="header__for-person-list-item"><a href="#!">Контакты</a></li>
+          </ul>
+          <div class="header__signIn-container">
+            <div class="header__signInimage">
+              <div class="header__top-img-services"><img src="media/top6.png" alt="Войти в личный каинет" title="Войти в личный кабинет"></div>
+            </div>
+            <div class="header__signIn-services"><a class="btn" href="#!">Войти в личный кабинет</a></div>
           </div>
         </div>
         <div class="header__contacts">
