--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
       </div>
     </div>
-    <div class="owl-carousel owl-theme">
+    <div class="owl-carousel-1 owl-carousel owl-theme">
       <div class="item">
         <div class="slider__content">
           <div class="slider__title">Центр для успешных инвестиций</div>
@@ -238,6 +238,23 @@
         <div class="slider__image"><img src="media/sliderMan.png" alt="image"></div>
       </div>
     </div>
+    <div class="servicesSlider">
+      <div class="servicesSlider__slider-container">
+        <h4>Услуги на рынке ценных бумаг</h4>
+        <div class="owl-carousel owl-theme owl-carousel-2">
+          <div class="item-2">
+            <p>1</p>
+          </div>
+          <div class="item-2">
+            <p>2</p>
+          </div>
+          <div class="item-2">
+            <p>3</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="customDots"></div>
     <script src="js/header__toggler/header__toggler.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
