--- a/index.html
+++ b/index.html
@@ -242,26 +242,26 @@
       <div class="servicesSlider__slider-container">
         <h4>Услуги на рынке ценных бумаг</h4>
         <div class="owl-carousel owl-theme owl-carousel-2">
-          <div class="item-2 item-2_slide1">
-            <div class="servicesSlider__slide-container">
-              <div class="servicesSlider__slide-content">
-                <div class="servicesSlider__slide-type">Брокерское обслуживание</div>
-                <div class="servicesSlider__slide-title">Персональное брокерское обслуживание в банке</div>
-                <div class="servicesSlider__slide-text">Бесплатный ввод и вывод денежных средств (российские рубли в наличной и безналичной форме)</div>
+          <div class="info-block info-block_slide1">
+            <div class="info-block__container">
+              <div class="info-block__content">
+                <div class="info-block__type">Брокерское обслуживание</div>
+                <div class="info-block__title">Персональное брокерское обслуживание в банке</div>
+                <div class="info-block__text">Бесплатный ввод и вывод денежных средств (российские рубли в наличной и безналичной форме)</div>
               </div>
-            </div><img class="servicesSlider__slide-image" src="media/servicesSlider1.png">
-            <div class="servicesSlider__slide-footer"><a href="#!">Подать заявку</a><span class="icon-go"></span></div>
+            </div><img class="info-block__image" src="media/servicesSlider1.png">
+            <div class="info-block__footer"><a href="#!">Подать заявку</a><span class="icon-go"></span></div>
           </div>
-          <div class="item-2 item-2_slide2">
-            <div class="servicesSlider__slide-container">
-              <div class="servicesSlider__slide-content">
-                <div class="servicesSlider__slide-type">Еврооблигации</div>
-                <div class="servicesSlider__slide-title">Еврооблигации для всех. Продажа еврооблигаций</div>
-                <div class="servicesSlider__slide-text">Фиксированная доходность выше, чем по банковскому вкладу</div>
+          <div class="info-block info-block_slide2">
+            <div class="info-block__container">
+              <div class="info-block__content">
+                <div class="info-block__type">Еврооблигации</div>
+                <div class="info-block__title">Еврооблигации для всех. Продажа еврооблигаций</div>
+                <div class="info-block__text">Фиксированная доходность выше, чем по банковскому вкладу</div>
               </div>
-              <div class="servicesSlider__slide-image"><img src="media/servicesSlider2.png"></div>
+              <div class="info-block__image"><img src="media/servicesSlider2.png"></div>
             </div>
-            <div class="servicesSlider__slide-footer"><a href="#!">Подать заявку</a><span class="icon-go"></span></div>
+            <div class="info-block__footer"><a href="#!">Подать заявку</a><span class="icon-go"></span></div>
           </div>
         </div>
       </div>
