немного изменил структуру, дата выводится через js, сделал блок с монетами и валютой, осталось заполнить их

--- a/index.html
+++ b/index.html
@@ -267,9 +267,40 @@
       </div>
     </div>
     <div class="customDots"></div>
-    <script src="js/header__toggler/header__toggler.js"></script>
+    <div class="flex-container">
+      <div class="main-container">
+        <div class="finance">
+          <div class="finance__menu">
+            <div class="finance__rate-toggler"> <a href="#!">Валюта</a>
+              <div class="finance__date"></div>
+            </div>
+            <div class="finance__coins-toggler"><a href="#!">Монеты</a></div>
+          </div>
+          <div class="finance__info">
+            <div class="info-block info-block_rate">
+              <div class="info-block__container">
+                <div class="info-block__content">
+                  <p>тут будет таблица</p>
+                </div>
+              </div>
+              <div class="info-block__footer"><a href="#!">Курсы валют в отделениях Банка</a><span class="icon-go"></span></div>
+            </div>
+            <div class="info-block info-block_coins">
+              <div class="info-block__container">
+                <div class="info-block__content">
+                  <p>тут будет таблица</p>
+                </div>
+              </div>
+              <div class="info-block__footer"><a href="#!">Каталог монет</a><span class="icon-go"></span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="blocks/header/header__toggler/header__toggler.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
-    <script src="js/slider/setupSlider.js"></script>
+    <script src="blocks/slider/setupSlider.js"></script>
+    <script src="blocks/finance/finance__date/finance__date.js"></script>
   </body>
 </html>
