закончил на 28 декабря

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="info-block__text">Бесплатный ввод и вывод денежных средств (российские рубли в наличной и безналичной форме)</div>
               </div>
             </div><img class="info-block__image" src="media/servicesSlider1.png">
-            <div class="info-block__footer"><a href="#!">Подать заявку</a><span class="icon-go"></span></div>
+            <div class="info-block__footer"><a href="#!">Подать заявку</a><span></span></div>
           </div>
           <div class="info-block info-block_slide2">
             <div class="info-block__container">
@@ -261,7 +261,7 @@
               </div>
               <div class="info-block__image"><img src="media/servicesSlider2.png"></div>
             </div>
-            <div class="info-block__footer"><a href="#!">Подать заявку</a><span class="icon-go"></span></div>
+            <div class="info-block__footer"><a href="#!">Подать заявку</a><span></span></div>
           </div>
         </div>
       </div>
@@ -283,7 +283,7 @@
                   <p>тут будет таблица</p>
                 </div>
               </div>
-              <div class="info-block__footer"><a href="#!">Курсы валют в отделениях Банка</a><span class="icon-go"></span></div>
+              <div class="info-block__footer"><a href="#!">Курсы валют в отделениях Банка</a><span></span></div>
             </div>
             <div class="info-block info-block_coins">
               <div class="info-block__container">
@@ -291,7 +291,7 @@
                   <p>тут будет таблица</p>
                 </div>
               </div>
-              <div class="info-block__footer"><a href="#!">Каталог монет</a><span class="icon-go"></span></div>
+              <div class="info-block__footer"><a href="#!">Каталог монет</a><span></span></div>
             </div>
           </div>
         </div>
