--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <div class="item">
         <div class="slider__content">
           <div class="slider__title">Центр для успешных инвестиций 2</div>
-          <div class="slider__text">Вы сможете выплатить банковский долг, даже в случае неблагоприятных жизненных обстоятельств.</div>
+          <div class="slider__text">Прямой доступ на валютный рынок. Зарабатывайте на колебаниях курсов мировых валют</div>
           <div class="slider__btn">
             <div class="btn">Подать заявку</div>
           </div>
