доделал блок финансов, осталось написать js. Подогнал по pixel perfect настолько, насколько получилось

--- a/index.html
+++ b/index.html
@@ -278,18 +278,75 @@
           </div>
           <div class="finance__info">
             <div class="info-block info-block_rate">
-              <div class="info-block__container">
-                <div class="info-block__content">
-                  <p>тут будет таблица</p>
-                </div>
+              <div class="info-block__container info-block__container-table">
+                <table class="info-block__table">
+                  <tr class="info-block__table-headers">
+                    <td class="info-block__table-header info-block__table-header-val"></td>
+                    <td class="info-block__table-header info-block__table-header-time"></td>
+                    <td class="info-block__table-header info-block__table-header-purchase"></td>
+                    <td class="info-block__table-header info-block__table-header-selling"></td>
+                    <td class="info-block__table-header info-block__table-header-cb"></td>
+                  </tr>
+                  <tr class="info-block__table-first-row">
+                    <td class="info-block__table-currency">USD</td>
+                    <td class="info-block__table-time"><img src="media/time2.png"></td>
+                    <td class="info-block__table-purchase info-block__table-purchase_down">64,56</td>
+                    <td class="info-block__table-selling info-block__table-selling_up">64,12</td>
+                    <td class="info-block__table-cb info-block__table-cb_up">64,5645</td>
+                  </tr>
+                  <tr class="info-block__table-row">
+                    <td class="info-block__table-currency">EUR</td>
+                    <td class="info-block__table-time"><img src="media/time1.png"></td>
+                    <td class="info-block__table-purchase info-block__table-purchase_down">72,20</td>
+                    <td class="info-block__table-selling info-block__table-selling_down">72,69</td>
+                    <td class="info-block__table-cb info-block__table-cb_down">72,3422</td>
+                  </tr>
+                  <tr class="info-block__table-row">
+                    <td class="info-block__table-currency">GBP</td>
+                    <td class="info-block__table-time"><img src="media/time2.png"></td>
+                    <td class="info-block__table-purchase info-block__table-purchase_up">84,40</td>
+                    <td class="info-block__table-selling info-block__table-selling_up">85,02</td>
+                    <td class="info-block__table-cb info-block__table-cb_up">85,4443</td>
+                  </tr>
+                  <tr class="info-block__table-row">
+                    <td class="info-block__table-currency">chf</td>
+                    <td class="info-block__table-time"><img src="media/time1.png"></td>
+                    <td class="info-block__table-purchase info-block__table-purchase_down">59,33</td>
+                    <td class="info-block__table-selling info-block__table-selling_down">60,56</td>
+                    <td class="info-block__table-cb info-block__table-cb_up">59,6664</td>
+                  </tr>
+                </table>
               </div>
               <div class="info-block__footer"><a href="#!">Курсы валют в отделениях Банка</a><span></span></div>
             </div>
             <div class="info-block info-block_coins">
-              <div class="info-block__container">
-                <div class="info-block__content">
-                  <p>тут будет таблица</p>
-                </div>
+              <div class="info-block__container info-block__container-table">
+                <table class="info-block__table">
+                  <tr class="info-block__table-headers">
+                    <td class="info-block__table-header info-block__table-header-coin"></td>
+                    <td class="info-block__table-header info-block__table-header-value"></td>
+                    <td class="info-block__table-header info-block__table-header-purchase"></td>
+                    <td class="info-block__table-header info-block__table-header-selling"></td>
+                  </tr>
+                  <tr class="info-block__table-first-row_mt-30px">
+                    <td class="info-block__table-coin" rowspan="2"><img src="media/coin1.png"></td>
+                    <td class="info-block__table-coin-name" colspan="3">Георгий Победоносец (ММД)</td>
+                  </tr>
+                  <tr class="info-block__table-row_mt-15px">
+                    <td class="info-block__table-value">50</td>
+                    <td class="info-block__table-purchase">21 500</td>
+                    <td class="info-block__table-selling">22 456</td>
+                  </tr>
+                  <tr class="info-block__table-row">
+                    <td class="info-block__table-coin" rowspan="2"><img src="media/coin2.png"></td>
+                    <td class="info-block__table-coin-name" colspan="3">Георгий Победоносец (серебро)</td>
+                  </tr>
+                  <tr class="info-block__table-row_mt-15px">
+                    <td class="info-block__table-value">100</td>
+                    <td class="info-block__table-purchase">23 565</td>
+                    <td class="info-block__table-selling">23 890</td>
+                  </tr>
+                </table>
               </div>
               <div class="info-block__footer"><a href="#!">Каталог монет</a><span></span></div>
             </div>
